tests/fail/compile-fail-1.rs
fn main() {
    let x: usize;
    {
        x = &String::new();
    }
    println!("{}", x);
}
