tests/fail/compile-fail-1.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail-1.rs:4:13
  |
2 |     let x: usize;
  |            ----- expected due to this type
3 |     {
4 |         x = &String::new();
  |             ^^^^^^^^^^^^^^ expected `usize`, found `&String`
